@@ -855,6 +855,7 @@ function parse_wikitext(id) {
     immutable_plugin: false,
     link_only: false,
 	in_font: false,
+	is_image:false,
 
     backup: function(c1,c2) {
         var c1_inx = results.lastIndexOf(c1);     // start position of chars to delete
@@ -905,6 +906,7 @@ function parse_wikitext(id) {
             var img_align = '';   
             var alt = "";                     
             this.is_smiley = false;
+			this.is_image=true;
         }
 
         if(tag == 'a') {
@@ -927,7 +929,7 @@ function parse_wikitext(id) {
             save_url = "";     
             this.link_title = "";
             this.link_class= "";
-
+            this.is_image=false;
           
         }
   
@@ -1565,6 +1567,10 @@ function parse_wikitext(id) {
          
           if(this.in_endnotes && tag == 'a') return; 
           if(this.code_type && tag == 'span') tag = 'blank'; 
+		  if(this.image_link_type && tag=='a') {  // fix for Chrome, to prevent images from being embedded in links
+		    tag = 'blank';	
+			this.is_image = true;
+		  }
           results += markup[tag];
 
           if(tag == 'td' || tag == 'th' || (this.last_col_pipes && this.td_align == 'center')) {
@@ -1582,7 +1588,7 @@ function parse_wikitext(id) {
           }
           else if(tag == 'img') {      
                var link_type = this.image_link_type;              
-               this.image_link_type="";
+               this.image_link_type="";			
                if(this.link_only) link_type = 'link_only';
                if(!link_type){
                   link_type = 'nolink'; 
@@ -1592,6 +1598,7 @@ function parse_wikitext(id) {
                }
                
                if(link_type == 'link_only') {
+	            if(!this.attr) this.attr = this.link_title;  // fix for Chrome which loses image name	       
                     img_size='?linkonly';
                }
                else if(link_type) { 
@@ -1614,7 +1621,7 @@ function parse_wikitext(id) {
                   this.attr += '  '; 
                }
            
-               results += this.attr + '}}';
+               results += this.attr + '}}';			
                this.attr = 'src';
           }
           else if(tag == 'plugin' || tag == 'pre' || tag == 'pre_td') {               
@@ -1624,7 +1631,6 @@ function parse_wikitext(id) {
                this.downloadable_file = "";
                this.downloadable_code = false;
           }
-
 
         }   // if markup tag
     },
@@ -1702,6 +1708,10 @@ function parse_wikitext(id) {
     else if(tag == 'a' && this.attr == 'src') {
             // if local image without link content, as in <a . . .></a>, delete link markup 
           if(this.backup('\[\[', '\{')) return;  
+		  if(this.is_image) {
+			 this.is_image = false;  //Chrome fix: prevents images with link components from being marked up as both links and images corrupting markup
+			 return;
+		  }
     }
    
     if(tag == 'ol' || tag == 'ul') {  
