@@ -1,4 +1,4 @@
-rev 12-May_11-22_51
+rev 12-May_12-16_53
 
 8 Sep
 This distribution marks the changeover to a single distribution of fckgLite based on the jQuery branch of fckgLiteSafe.
@@ -166,3 +166,6 @@ Arabic language update for fckgLite GUI
 Added file icon for epub links to editor
 
 Kludge to fix Chrome's corrupting of mediafile links on re-save.  (lines 1528ff or this distro).
+
+12 May
+Fixes for Chrome where image links are corrupted on re-save. See comments.
